# start-google-test

./: .gitignore  CMakeLists.txt  README.md
include/: calc.h
src/: calc.cpp
test/: CMakeLists.txt  test_calc.cpp
